--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,30 +1,6 @@
 @font-face{
-    font-family: 'W01';
-    src: url('../fonts/站酷仓耳渔阳体-W01.ttf');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face{
-    font-family: 'W02';
-    src: url('../fonts/站酷仓耳渔阳体-W01.ttf');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face{
     font-family: 'W03';
-    src: url('../fonts/站酷仓耳渔阳体-W03.ttf');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face{
-    font-family: 'W04';
-    src: url('../fonts/站酷仓耳渔阳体-W04.ttf');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face{
-    font-family: 'W05';
-    src: url('../fonts/站酷仓耳渔阳体-W05.ttf');
+    src: url('../fonts/ceyy-W03.ttf');
     font-weight: normal;
     font-style: normal;
 }
